--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -53,6 +53,7 @@
 												photo</span>
 										</a>
 									</div>
+									<button type="button" class="btn btn-outline-success">Success</button>
 
 								</div>
 							</div>
